* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[expected]]
== Planned Future Changes

* The `html` field type will be **removed** in the future. Instead the `string` should be used in combination with an additional configuration property for this field in the schema.

* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service]. 

[[v0.27.3]]
== 0.27.3 (TBD)

icon:check[] Elasticsearch: The check for the `ingest-attachment` plugin was fixed for installations which were using the `AWS` Elasticsearch service.

icon:plus[] API: Make OAuth2 Server options overrideable via environment variables.

icon:check[] REST: A concurrency issue has been fixed which could lead to problems when creating multiple schemas in-parallel.

[[v0.27.2]]
== 0.27.2 (07.11.2018)

icon:check[] REST: The CPU utilization for download requests has been reduced. link:https://github.com/gentics/mesh/issues/530[#530]

icon:plus[] Core: The Gentics Mesh server will now use native bindings to increase HTTP performance on Linux x86_64 platforms.

icon:check[] REST: Branch create requests will now correctly set the path prefix property. The value of the property was previously not used.

[[v0.27.1]]
== 0.27.1 (31.10.2018)

icon:plus[] REST: It is now possible to specify a path prefix for branches. When specified, all resolved paths will include the prefix. The webroot endpoint will also utilize the prefix to resolve nodes. The prefix can be set for new projects or for update requests on existing branches.

icon:check[] Java REST Client: Fixed wrong log output information.

icon:check[] REST: Fixed error while fetching jobs for deleted projects.
